2018-02-23    <cerebrum@gagarin.uit.no>

	* OU.py (OUMixin.find): fixed but in finf function where it
	wouldnt use the propper find function for ous with stedkode.

2018-02-22    <cerebrum@gagarin.uit.no>

	* OU.py (OUMixin): Override Stedkode.py find(). If OU does not have stedkode, use OU.find() instead.

	* bofhd_uit_cmds.py (BofhdExtension._format_ou_name): Return None if OU does not have stedkode

2018-02-12    <cerebrum@cleomedes.uit.no>

	* OrgLDIF.py: UiT does not wish to populate the postalAddress
	attribute with neither person home address or work
	address. setting this to empty string

2018-01-29    <cerebrum@cleomedes.uit.no>

	* OrgLdif.py (OrgLdifUitMixin.update_org_object_entry): updated o and eduOrgLegalName attributes
	(OrgLdifUitMixin.generate_org_object): updated o and eduOrgLegalName attributes

2017-11-24    <cerebrum@cleomedes.uit.no>

	* bofhd_uit_cmds.py (BofhdExtension.user_history_filtered): this
	function was unable to return a string on the right format. the
	join() function did not work as intended on the list containing
	all the dicts holding changelog info. rewrote the function to
	return a single string as it should be
	(BofhdExtension._format_from_cl): val does not have a .date
	field. returning val instead

2017-11-08    <cerebrum@cleomedes.uit.no>

	* access_FS.py (studieprog_xml_parser): Added this function to
	override similar function in no tree. this to make
	ad_export_autogroups_undervisning run withouth failure

2017-20-12	Håvard <cerebrum@cleomedes.uit.no>

        * bofhd_uit_cmds.py: Added user_history_filtered command from our old fork.

2017-10-02    <cerebrum@cleomedes.uit.no>

	* Constants.py (Constants): added constant to identify new students

2017-09-20  Karen   <cerebrum@metius.uit.no>

    * cim_datasource.py (create_dist_lists): Minor tidy-up of how things are logged when location info is missing or unrecognized.

2017-09-19    <cerebrum@cleomedes.uit.no>
